--- a/app/views/my-account.html
+++ b/app/views/my-account.html
@@ -312,7 +312,7 @@
                           </div>
                         </div>
                         <div class="col-md-5" style="margin-bottom: 10px;">
-                          <label class="control-label" for="created_date_to" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.CREATED_TO">To</label>
+                          <label class="control-label" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.CREATED_TO">To</label>
                           <div class="input-group" style="display: inline-table; width: 130px; vertical-align: top;">
                             <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="shipDate" is-open="popup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
                             <span class="input-group-btn">
@@ -326,7 +326,7 @@
                       </div>
                       <div class="row">
                         <div class="col-md-5" style="margin-bottom: 10px;">
-                          <label class="control-label" for="due_date_from" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.DUE_FROM">Due date From</label>
+                          <label class="control-label" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.DUE_FROM">Due date From</label>
                           <div class="input-group" style="display: inline-table; width: 130px; vertical-align: top;">
                             <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="shipDate" is-open="popup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
                             <span class="input-group-btn">
@@ -337,7 +337,7 @@
                           </div>
                         </div>
                         <div class="col-md-5" style="margin-bottom: 10px;">
-                          <label class="control-label" for="due_date_to" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.DUE_TO">To</label>
+                          <label class="control-label" style="width: 140px; margin-right: 10px;" translate="MY_ACCOUNT.MY_INVOICES.DUE_TO">To</label>
                           <div class="input-group" style="display: inline-table; width: 130px; vertical-align: top;">
                             <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="shipDate" is-open="popup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
                             <span class="input-group-btn">
