work on progress page

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1891,6 +1891,9 @@ p.payment_module img {margin: 0 10px 0px 0;}
 
 /* PROGRESS PAGE */
 .progress-container img {max-width: 100% !important;}
+.progress-bar-danger {
+  background-color: #ea5d30 !important;
+}
 .progress-bar-upela {background-color: #ea5d30;}
 #progress-container h3 {font-size: 18px;}
 #progress-container h4 {font-size: 16px;}
