--- a/app/views/order-progress.html
+++ b/app/views/order-progress.html
@@ -3,7 +3,8 @@
   <center>
     <h3 style="font-weight: normal;" translate="ORDER_PROGRESS.TITLE">PLEASE BE PATIENT <br>WHILE WE ARE LOOKING FOR THE BEST OFFERS</h3>
     <div id="progress-container" class="progress" style="width: 250px; margin: 0 auto;">
-      <div id="jauge" class="progress-bar progress-bar-striped progress-bar-upela active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+      <!--<div id="jauge" class="progress-bar progress-bar-striped progress-bar-upela active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>-->
+      <uib-progressbar class="progress-striped active" max="100" value="ctrl.progressValue" type="danger"></uib-progressbar>
     </div>
     <br><img src="images/files/upload/progress/upela-logo.jpg" alt="Upela">
     <h3 class="text-center orange" translate="ORDER_PROGRESS.WORLD_LOGO">Send your envelopes, parcels and pallets all over the world!</h3>
